Strange fix for overflow + border-radius
Based on this gist: https://gist.github.com/ayamflow/b602ab436ac9f05660d9c15190f4fd7b

--- a/_global.scss
+++ b/_global.scss
@@ -109,6 +109,8 @@ img {
 figure {
   margin: 0 0 $spacer;
   overflow: hidden;
+  backface-visibility: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
   line-height: 0;
 
   img {
